--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a API for a personal blog website",
   "main": "index.js",
   "scripts": {
+    "release": "standard-version",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "deploy": "npm run build && node build/index.js",
@@ -14,5 +15,8 @@
   "dependencies": {
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "standard-version": "^9.5.0"
   }
 }
