--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Huijiro",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "standard-version": "^9.5.0"
   }
 }
