--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Huijiro",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.1.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.5.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
