--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
